--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-swagger-client",
+  "name": "angular-swagger2-client",
   "homepage": "https://github.com/olaferlandsen/angular-swagger-client",
   "authors": [
     "Olaf Erlandsen <olaftriskel@gmail.com>"
